# Credence

./: .gitignore  README.md  render.yaml
backend/: .env  README.md  package-lock.json  package.json  prisma.config.js  tsconfig.json
backend/prisma/: dev.db  schema.prisma
backend/prover/: .gitignore  Cargo.toml  credence-prover
backend/prover/src/: main.rs  main.rs.save  validate.rs
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  supabase-auth.guard.ts
backend/src/lib/: supabase-admin.ts
backend/src/passport/: passport.controller.ts  passport.module.ts  passport.service.ts
backend/src/portfolio/: portfolio.controller.ts  portfolio.module.ts  portfolio.service.ts
backend/src/price/: price.service.ts
backend/src/prisma/: prisma.service.ts
backend/src/proving/: proving.module.ts  proving.service.ts
backend/src/vascore/: vascore.controller.ts  vascore.module.ts  vascore.service.ts  vascore.types.ts
circuits/: build.sh
circuits/credit_passport/: Nargo.toml  Prover.toml  README.md
circuits/credit_passport/src/: main.nr
contracts/credit-passport/: Cargo.toml  README.md
contracts/credit-passport/src/: lib.rs
contracts/credit-passport/test_snapshots/test/: test_cannot_double_issue.1.json  test_constructor_sets_vk.1.json  test_set_verification_key.1.json  test_tier_validation.1.json
frontend/: README.md  package-lock.json  package.json  simulate_verify.cjs
frontend/src/app/: ambient-bg.module.css  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: Header.tsx  (+13 more)
(+10 files in other folders)
