[package]
name = "credence-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "credence-prover"
path = "src/main.rs"

[[bin]]
name = "validate"
path = "src/validate.rs"